noinst_LIBRARIES = libraknet.a
libraknet_a_SOURCES = AsynchronousFileIO.cpp \
			BitStream.cpp \
			BitStream_NoTemplate.cpp \
			CheckSum.cpp \
			CommandParserInterface.cpp \
			ConnectionGraph.cpp \
			ConsoleServer.cpp \
			DS_ByteQueue.cpp \
			DS_HuffmanEncodingTree.cpp \
			DS_Table.cpp \
			DataBlockEncryptor.cpp \
			DataCompressor.cpp \
			DirectoryDeltaTransfer.cpp \
			EmailSender.cpp \
			EncodeClassName.cpp \
			ExtendedOverlappedPool.cpp \
			FileList.cpp \
			FileListTransfer.cpp \
			FileOperations.cpp \
			FullyConnectedMesh.cpp \
			GetTime.cpp \
			InternalPacketPool.cpp \
			LightweightDatabaseClient.cpp \
			LightweightDatabaseCommon.cpp \
			LightweightDatabaseServer.cpp \
			LinuxStrings.cpp \
			LogCommandParser.cpp \
			NatPunchthrough.cpp \
			NetworkIDGenerator.cpp \
			NetworkTypes.cpp \
			PacketConsoleLogger.cpp \
			PacketFileLogger.cpp \
			PacketLogger.cpp \
			PluginInterface.cpp \
			RPCMap.cpp \
			RakClient.cpp \
			RakNetCommandParser.cpp \
			RakNetStatistics.cpp \
			RakNetTransport.cpp \
			RakNetworkFactory.cpp \
			RakPeer.cpp \
			RakServer.cpp \
			RakSleep.cpp \
			Rand.cpp \
			ReliabilityLayer.cpp \
			ReplicaManager.cpp \
			Router.cpp \
			SHA1.cpp \
			SimpleMutex.cpp \
			SocketLayer.cpp \
			StringCompressor.cpp \
			StringTable.cpp \
			SystemAddressList.cpp \
			SystemDatabaseClient.cpp \
			SystemDatabaseServer.cpp \
			TCPInterface.cpp \
			TableSerializer.cpp \
			TelnetTransport.cpp \
			_findfirst.cpp \
			rijndael.cpp
libraknet_a_CPPFLAGS = -w -DLINUX -DSAMPSRV
